# proc-macro-workshop

./: main.rs
builder/: Cargo.toml
builder/src/: lib.rs
builder/src/struct_generator/: mod.rs  struct_fields_generator.rs
debug/: Cargo.toml
debug/src/: common.rs  lib.rs
debug/src/visitors/: mod.rs  type_path_visitor.rs
seq/: Cargo.toml
seq/src/: lib.rs
seq/tests/: progress.rs
sorted/: Cargo.toml
sorted/src/: lib.rs
